# codemodel

./: .codeclimate.yml  .coveragerc  .gitignore  .travis.yml  README.md  autorelease_check.py  azure-pipelines.yml  setup.cfg  setup.py  travis.yml
.github/workflows/: autorelease-deploy.yml  autorelease-prep.yml  unit-test.yml
codemodel/: __init__.py  asttools.py  code_model.py  dag.py  generate_json.py  generate_models.py  imports.py  instance.py  json_stack.py  numpydoc_helper.py  script_model.py
codemodel/asttools/: __init__.py  function_handling.py  rewriters.py  validators.py
codemodel/tests/: test_asttools.py  test_code_model.py  test_dag.py  test_generate_json.py  test_imports.py  test_json_stack.py  test_numpydoc_helper.py  test_script_model.py
codemodel/tests/asttools/: functions_ast.py  test_function_handling.py  test_imports.py  test_rewriters.py  test_validators.py
codemodel/tests/type_validation/: test_array_validation.py  test_type_validation.py
codemodel/type_validation/: __init__.py  array_validation.py  type_validation.py
devtools/: tests_require.txt  wait_for_testpypi.sh
docs/: conf.py  index.rst  requirements.txt
