[metadata]
name = codemodel
version = 0.0.7
# version should end in .dev0 if this isn't to be released
short_description = Advanced metaprogramming tools
description = Advanced metaprogramming tools
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/dwhswenson/codemodel
classifiers = 
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Natural Language :: English
    Operating System :: POSIX
    Programming Language :: Python :: 3

[options]
install_requires =
    astor
    black  # TODO: should be optional
    isort >= 5  # TODO: should be optional
packages = find:

[bdist_wheel]
universal=1
